# dkrouter-generator

./: .gitignore  README.md  config.yml  dkrouter-generator.cabal  preOutgoing.sh
src/: Main.hs
src/DirectedKeys/: GenerateCfg.hs
src/DirectedKeys/GenerateCfg/: Internal.hs
test/: TestImport.hs
test/DirectedKeys/: GenerateCfgSpec.hs
