Name:                   dkrouter-generator
Version:                0.1.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      DirectedKeys.GenerateCfg
  Other-Modules:        DirectedKeys.GenerateCfg.Internal
  Build-Depends:        aeson >= 0.7.0.6,
                        base >= 4 && < 5
                      , persist-mongo-template >= 0.5.6
                      , directed-keys >= 0.2.1  
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                       ,test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , aeson
                      , hspec
                      , directed-keys 
                      , persist-mongo-template 

Source-Repository head
  Type:                 git

Executable dkGenFile
   main-is:            Main.hs
   HS-Source-Dirs:     src
   build-depends:       
                        aeson ,
                        base
                      , alarm-db-types 
                      , acid-cell 
                      , directed-keys
                      , persist-mongo-template 


   default-language:  Haskell2010
   ghc-options:       -threaded -O2 -rtsopts -Wall 





         


--  Location:             
